fixes code overflow in mobile browsers

--- a/source/stylesheets/_footer.scss
+++ b/source/stylesheets/_footer.scss
@@ -25,6 +25,7 @@ html, body {
 	background: $footer-background;
 	padding: $base-line-height;
 	width: 100%;
+	margin-top:20px;
 
 	.footer-logo {
 		margin-right: 1em;
